packages/codex-docs/docs/.vitepress/theme/custom.css
/* Codex design tokens and rules for VitePress docs. */
@import '@wikimedia/codex-design-tokens/theme-wikimedia-ui.css';

/* stylelint-disable selector-class-pattern */

/*
 * CSS custom property overrides of the default VitePress theme.
 * Note that dark mode colors are set up in the style block of CustomLayout.vue, because we can use
 * the dark mode Less mixin there.
 */
:root {
	/* syntax highlighting fixes */
	--vp-code-block-color: rgba( 255, 255, 245, 0.86 );
	--vp-code-block-bg: #292b30;
	--vp-code-block-divider-color: #000;
	--vp-code-color: var( --color-emphasized );
	/* Language label inside code blocks. We use dark mode code blocks for both color modes, so this
	   color shouldn't change. */
	--vp-code-lang-color: var( --color-inverted-fixed );
	--vp-code-tab-text-color: rgba( 235, 235, 245, 0.6 );
	--vp-code-tab-hover-text-color: rgba( 255, 255, 245, 0.86 );
	--vp-code-tab-active-text-color: rgba( 255, 255, 245, 0.86 );

	--vp-c-brand: var( --color-progressive );
	--vp-c-brand-light: var( --color-progressive--hover );
	/* Used for links within content. */
	--vp-c-brand-1: var( --color-progressive );
	/* Used for links within content on hover. */
	--vp-c-brand-2: var( --color-progressive--hover );

	--vp-c-text: var( --color-base );
	--vp-c-text-1: var( --color-base );
	--vp-c-text-2: var( --color-subtle );
	--vp-c-text-code: var( --color-emphasized );

	--vp-c-white-soft: var( --background-color-interactive-subtle );
	--vp-c-white-mute: var( --background-color-interactive-subtle );

	--vp-c-indigo: var( --color-progressive );
	--vp-c-indigo-soft: var( --color-progressive--active );

	--vp-c-bg-alt: var( --background-color-interactive-subtle );

	--vp-c-divider: var( --border-color-base );
	--vp-c-divider-light: var( --border-color-subtle );
	--vp-c-gutter: var( --border-color-subtle );

	--vp-font-family-base: var( --font-family-system-sans );
	--vp-font-family-serif: var( --font-family-serif );

	--vp-shadow-3: var( --box-shadow-drop-medium );

	/* Z-indexes */
	/* Header is sticky. */
	--vp-z-index-nav: var( --z-index-sticky );

	--vp-custom-block-info-border: var( --border-color-notice );
	--vp-custom-block-info-text: var( --color-notice );
	--vp-custom-block-info-bg: var( --background-color-notice-subtle );

	--vp-custom-block-tip-border: var( --border-color-progressive );
	--vp-custom-block-tip-text: var( --color-notice );
	--vp-custom-block-tip-bg: var( --background-color-interactive-subtle );

	--vp-custom-block-warning-border: var( --border-color-warning );
	--vp-custom-block-warning-text: var( --color-notice );
	--vp-custom-block-warning-bg: var( --background-color-warning-subtle );

	--vp-custom-block-danger-border: var( --border-color-error );
	--vp-custom-block-danger-text: var( --color-notice );
	--vp-custom-block-danger-bg: var( --background-color-error-subtle );

	--vp-custom-block-details-border: var( --border-color-notice );
	--vp-custom-block-details-text: var( --color-notice );
	--vp-custom-block-details-bg: var( --background-color-notice-subtle );
}

/* VitePress theme overrides and unsets. */
/* HTML elements. ---------------------------------------------------------- */

html,
body {
	/* Use `initial` to overwrite VitePress' absolute font sizing.
	 * We can't use `unset` due to cross-browser compatibility right now.
	 * See T303100.
	 */
	font-size: initial;
	/* Set `line-height` to medium `1.6` in default theme. This also fulfills the
	 * WCAG 2.2 AA requirement for line height of at least 1.5.
	 */
	line-height: var( --line-height-medium );
}

.vp-doc h1,
.vp-doc h2,
.vp-doc h3,
.vp-doc h4,
.vp-doc h5,
.vp-doc h6 {
	color: var( --color-emphasized );
	/* Use `initial` to reset VitePress' opinionated `letter-spacing` to browser default.
	 * In future, replace by `.vp-doc :is( h1, … )`.
	 */
	letter-spacing: initial;
}

.vp-doc h2,
.vp-doc h3,
.vp-doc h4,
.vp-doc h5,
.vp-doc h6 {
	font-weight: var( --font-weight-bold );
}

.vp-doc h1 {
	font-family: var( --font-family-heading-main );
	font-size: var( --font-size-xxx-large );
	font-weight: var( --font-weight-normal );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h2 {
	padding-top: var( --spacing-300 );
	font-size: var( --font-size-xx-large );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h2 .header-anchor {
	/* Align anchor link with heading. */
	top: var( --spacing-300 );
}

.vp-doc h3 {
	font-size: var( --font-size-x-large );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h4 {
	margin-top: var( --spacing-150 );
	font-size: var( --font-size-large );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h5 {
	margin-top: var( --spacing-125 );
	font-size: var( --font-size-medium );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h6 {
	font-size: var( --font-size-medium );
	line-height: var( --line-height-medium );
}

.vp-doc a {
	/* Use `initial` to reset VitePress' opinionated font weight to browser default. */
	font-weight: initial;
	text-decoration: var( --text-decoration-none );
	transition-duration: 0s;
}

.vp-doc a:hover {
	text-decoration: var( --text-decoration-underline );
}

/* VitePress doesn't set a color for active links. */
.vp-doc a:active {
	color: var( --color-progressive--active );
}

/* Code. */
.vp-doc :not( pre ) > code {
	background-color: var( --background-color-neutral );
	border-radius: var( --border-radius-base );
	padding: var( --spacing-12 ) var( --spacing-25 );
}

.custom-block.tip code {
	color: var( --color-base );
}

/*
 * Remove bottom margin from last code block in a paragraph, this leaves spacing to
 * be set by `.vp-doc p` only.
 */
.vp-doc p > code:last-child {
	margin-bottom: 0;
}

.vp-doc a:hover > code {
	color: var( --color-progressive );
}
/* ... */

